# tarot-ai-app

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/: ai.py  chat.py  globals.py  main.py  tarot.py
src/data/: conversation.py  utils.py
