[project]
name = "tarot-ai-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.20",
    "langchain-openai>=0.3.8",
    "streamlit>=1.43.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 120
